Ingest pilot data

--- a/notebooks/ingest_images.ipynb
+++ b/notebooks/ingest_images.ipynb
@@ -2,14 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Setup\" data-toc-modified-id=\"Setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Setup</a></span></li><li><span><a href=\"#Create-images-and-errors-tables|\" data-toc-modified-id=\"Create-images-and-errors-tables|-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Create images and errors tables|</a></span></li><li><span><a href=\"#Functions\" data-toc-modified-id=\"Functions-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Functions</a></span><ul class=\"toc-item\"><li><span><a href=\"#Search-the-image-for-the-sample-ID-(UUID)\" data-toc-modified-id=\"Search-the-image-for-the-sample-ID-(UUID)-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Search the image for the sample ID (UUID)</a></span><ul class=\"toc-item\"><li><span><a href=\"#This-is-a-helper-function-that-slides-a-window-over-the-image\" data-toc-modified-id=\"This-is-a-helper-function-that-slides-a-window-over-the-image-3.1.1\"><span class=\"toc-item-num\">3.1.1&nbsp;&nbsp;</span>This is a helper function that slides a window over the image</a></span></li><li><span><a href=\"#Use-various-strategies-to-get-the-QR-code-from-the-image\" data-toc-modified-id=\"Use-various-strategies-to-get-the-QR-code-from-the-image-3.1.2\"><span class=\"toc-item-num\">3.1.2&nbsp;&nbsp;</span>Use various strategies to get the QR code from the image</a></span></li><li><span><a href=\"#Read-in-the-image-and-process-it-further\" data-toc-modified-id=\"Read-in-the-image-and-process-it-further-3.1.3\"><span class=\"toc-item-num\">3.1.3&nbsp;&nbsp;</span>Read in the image and process it further</a></span></li></ul></li><li><span><a href=\"#Ingest-one-image-batch\" data-toc-modified-id=\"Ingest-one-image-batch-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Ingest one image batch</a></span></li><li><span><a href=\"#Resolve-an-error\" data-toc-modified-id=\"Resolve-an-error-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Resolve an error</a></span></li><li><span><a href=\"#Manually-set-an-image-record\" data-toc-modified-id=\"Manually-set-an-image-record-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Manually set an image record</a></span></li><li><span><a href=\"#Create-tables\" data-toc-modified-id=\"Create-tables-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>Create tables</a></span></li></ul></li><li><span><a href=\"#Ingest-images\" data-toc-modified-id=\"Ingest-images-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Ingest images</a></span><ul class=\"toc-item\"><li><span><a href=\"#Ingest-New-York-Botanical-Garden-(1st-trip)\" data-toc-modified-id=\"Ingest-New-York-Botanical-Garden-(1st-trip)-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Ingest New York Botanical Garden (1st trip)</a></span></li><li><span><a href=\"#Ingest-Harvard-Herbaria\" data-toc-modified-id=\"Ingest-Harvard-Herbaria-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Ingest Harvard Herbaria</a></span></li><li><span><a href=\"#Ingest-Ohio-State-University-Herbarium\" data-toc-modified-id=\"Ingest-Ohio-State-University-Herbarium-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Ingest Ohio State University Herbarium</a></span></li><li><span><a href=\"#Ingest-California-Academy-of-Sciences-Herbarium\" data-toc-modified-id=\"Ingest-California-Academy-of-Sciences-Herbarium-4.4\"><span class=\"toc-item-num\">4.4&nbsp;&nbsp;</span>Ingest California Academy of Sciences Herbarium</a></span></li><li><span><a href=\"#Ingest-Missouri-Botanical-Garden\" data-toc-modified-id=\"Ingest-Missouri-Botanical-Garden-4.5\"><span class=\"toc-item-num\">4.5&nbsp;&nbsp;</span>Ingest Missouri Botanical Garden</a></span></li><li><span><a href=\"#Ingest-New-York-Botanical-Garden-(2nd-trip)\" data-toc-modified-id=\"Ingest-New-York-Botanical-Garden-(2nd-trip)-4.6\"><span class=\"toc-item-num\">4.6&nbsp;&nbsp;</span>Ingest New York Botanical Garden (2nd trip)</a></span></li></ul></li><li><span><a href=\"#Ingest-Pilot-(UFBI)-Data\" data-toc-modified-id=\"Ingest-Pilot-(UFBI)-Data-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Ingest Pilot (UFBI) Data</a></span></li><li><span><a href=\"#Put-data-into-a-CSV-file\" data-toc-modified-id=\"Put-data-into-a-CSV-file-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Put data into a CSV file</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ingest images"
+    "# Setup\n",
+    "\n",
+    "** Warning: This notebook can take a hours to complete. **"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +37,13 @@
     "\n",
     "import lib.db as db\n",
     "import lib.util as util\n",
+    "import lib.google as google\n",
     "from lib.dict_attr import DictAttrs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +51,7 @@
     "\n",
     "CXN = db.connect()\n",
     "RAW_DATA = Path('..') / 'data' / 'raw'\n",
+    "INTERIM_DATA = Path('..') / 'data' / 'interim'\n",
     "PROCESSED_DATA = Path('..') / 'data' / 'processed'"
    ]
   },
@@ -45,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create images and errors tables"
+    "# Create images and errors tables|"
    ]
   },
   {
@@ -87,14 +101,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Search the image for the sample ID (UUID)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is a helper function that slides a window over the image. It helps with feature extraction by limiting the search area."
+    "# Functions\n",
+    "\n",
+    "## Search the image for the sample ID (UUID)\n",
+    "\n",
+    "### This is a helper function that slides a window over the image\n",
+    "\n",
+    "It helps with feature extraction by limiting the search area"
    ]
   },
   {
@@ -124,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use various strategies to get the QR code from the image."
+    "### Use various strategies to get the QR code from the image"
    ]
   },
   {
@@ -166,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read in the image and process it further.\n"
+    "### Read in the image and process it further"
    ]
   },
   {
@@ -190,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ingest one image batch"
+    "## Ingest one image batch"
    ]
   },
   {
@@ -242,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Resolve an error"
+    "## Resolve an error"
    ]
   },
   {
@@ -262,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Manually set an image record"
+    "## Manually set an image record"
    ]
   },
   {
@@ -282,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create tables"
+    "## Create tables"
    ]
   },
   {
@@ -299,7 +312,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ingest New York Botanical Garden (1st trip)"
+    "# Ingest images\n",
+    "\n",
+    "## Ingest New York Botanical Garden (1st trip)"
    ]
   },
   {
@@ -335,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ingest Harvard Herbaria"
+    "## Ingest Harvard Herbaria"
    ]
   },
   {
@@ -364,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ingest Ohio State University Herbarium"
+    "## Ingest Ohio State University Herbarium"
    ]
   },
   {
@@ -394,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ingest California Academy of Sciences Herbarium"
+    "## Ingest California Academy of Sciences Herbarium"
    ]
   },
   {
@@ -423,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ingest Missouri Botanical Garden"
+    "## Ingest Missouri Botanical Garden"
    ]
   },
   {
@@ -456,19 +471,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ingest New York Botanical Garden (2nd trip)"
+    "## Ingest New York Botanical Garden (2nd trip)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 606/606 [14:34<00:00,  1.44s/it]\n"
+     "ename": "NameError",
+     "evalue": "name 'RAW_DATA' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-3eef3adfc643>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRAW_DATA\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m'NY_visit_2'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mingest_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'RAW_DATA' is not defined"
      ]
     }
    ],
@@ -482,7 +501,212 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Put data into a CSV file"
+    "# Ingest Pilot (UFBI) Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>File</th>\n",
+       "      <th>Identifier</th>\n",
+       "      <th>sample_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20170523_154701.jpg</td>\n",
+       "      <td>NY: Cronquist 11617</td>\n",
+       "      <td>2179dce7-dac2-4fc1-84a3-8725acefa8cc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20170523_154645.jpg</td>\n",
+       "      <td>NY: Nee 38556</td>\n",
+       "      <td>00420ba6-4228-49e8-845c-30a967de4b51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20170523_154638.jpg</td>\n",
+       "      <td>NY: Jorengensen 65676</td>\n",
+       "      <td>72b64a1e-0dd9-4f44-9f82-afaee163d57b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20170523_154629.jpg</td>\n",
+       "      <td>NY: Jaramillo 10160</td>\n",
+       "      <td>3364f3bb-c0a1-4af4-8b3b-a780de9f1594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20170523_154621.jpg</td>\n",
+       "      <td>NY: Jorgensen 61589</td>\n",
+       "      <td>6e76a0be-4b0f-4e01-a6e6-1cd1395d4458</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  File             Identifier  \\\n",
+       "0  20170523_154701.jpg    NY: Cronquist 11617   \n",
+       "1  20170523_154645.jpg          NY: Nee 38556   \n",
+       "2  20170523_154638.jpg  NY: Jorengensen 65676   \n",
+       "3  20170523_154629.jpg    NY: Jaramillo 10160   \n",
+       "4  20170523_154621.jpg    NY: Jorgensen 61589   \n",
+       "\n",
+       "                              sample_id  \n",
+       "0  2179dce7-dac2-4fc1-84a3-8725acefa8cc  \n",
+       "1  00420ba6-4228-49e8-845c-30a967de4b51  \n",
+       "2  72b64a1e-0dd9-4f44-9f82-afaee163d57b  \n",
+       "3  3364f3bb-c0a1-4af4-8b3b-a780de9f1594  \n",
+       "4  6e76a0be-4b0f-4e01-a6e6-1cd1395d4458  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_name = 'UFBI_identifiers_photos.csv'\n",
+    "csv_path = INTERIM_DATA / csv_name\n",
+    "\n",
+    "with open(csv_path, 'wb') as csv_out:\n",
+    "    google.export_sheet_csv('UFBI_identifiers_photos', csv_out)\n",
+    "\n",
+    "df = pd.read_csv(csv_path)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "456\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sample_id</th>\n",
+       "      <th>file_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2179dce7-dac2-4fc1-84a3-8725acefa8cc</td>\n",
+       "      <td>../data/raw/UFBI_sample_photos/20170523_154701...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00420ba6-4228-49e8-845c-30a967de4b51</td>\n",
+       "      <td>../data/raw/UFBI_sample_photos/20170523_154645...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>72b64a1e-0dd9-4f44-9f82-afaee163d57b</td>\n",
+       "      <td>../data/raw/UFBI_sample_photos/20170523_154638...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3364f3bb-c0a1-4af4-8b3b-a780de9f1594</td>\n",
+       "      <td>../data/raw/UFBI_sample_photos/20170523_154629...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6e76a0be-4b0f-4e01-a6e6-1cd1395d4458</td>\n",
+       "      <td>../data/raw/UFBI_sample_photos/20170523_154621...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              sample_id  \\\n",
+       "0  2179dce7-dac2-4fc1-84a3-8725acefa8cc   \n",
+       "1  00420ba6-4228-49e8-845c-30a967de4b51   \n",
+       "2  72b64a1e-0dd9-4f44-9f82-afaee163d57b   \n",
+       "3  3364f3bb-c0a1-4af4-8b3b-a780de9f1594   \n",
+       "4  6e76a0be-4b0f-4e01-a6e6-1cd1395d4458   \n",
+       "\n",
+       "                                           file_name  \n",
+       "0  ../data/raw/UFBI_sample_photos/20170523_154701...  \n",
+       "1  ../data/raw/UFBI_sample_photos/20170523_154645...  \n",
+       "2  ../data/raw/UFBI_sample_photos/20170523_154638...  \n",
+       "3  ../data/raw/UFBI_sample_photos/20170523_154629...  \n",
+       "4  ../data/raw/UFBI_sample_photos/20170523_154621...  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql_df = pd.DataFrame()\n",
+    "sql_df['sample_id'] = df.sample_id\n",
+    "sql_df['file_name'] = df['File'].apply(\n",
+    "    lambda x: '../data/raw/UFBI_sample_photos/' + x)\n",
+    "\n",
+    "sql_df.to_sql('images', CXN, if_exists='append', index=False)\n",
+    "\n",
+    "print(len(df))\n",
+    "sql_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Put data into a CSV file"
    ]
   },
   {
@@ -713,6 +937,18 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.3"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
