--- a/notebooks/misc_utilities.ipynb
+++ b/notebooks/misc_utilities.ipynb
@@ -1,23 +1,259 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Miscellaneous-Functions-and-One-Off-Utilities\" data-toc-modified-id=\"Miscellaneous-Functions-and-One-Off-Utilities-1\">Miscellaneous Functions and One-Off Utilities</a></span><ul class=\"toc-item\"><li><span><a href=\"#Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy\" data-toc-modified-id=\"Get-the-Coverage-of-the-Genbank-Loci-vs.-the-Sampled-Master-Taxonomy-1.1\">Get the Coverage of the Genbank Loci vs. the Sampled Master Taxonomy</a></span></li><li><span><a href=\"#Assign-UUIDs-to-UFIB-(Pilot-Study)-Images\" data-toc-modified-id=\"Assign-UUIDs-to-UFIB-(Pilot-Study)-Images-1.2\">Assign UUIDs to UFIB (Pilot Study) Images</a></span></li></ul></li><li><span><a href=\"#Picogreen-Yields\" data-toc-modified-id=\"Picogreen-Yields-2\">Picogreen Yields</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Miscellaneous Functions and One-Off Utilities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get the Coverage of the Genbank Loci vs. the Sampled Master Taxonomy\n",
+    "\n",
+    "** Note: Run this after ingesting the worksheets **"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import numpy as np\n",
+    "from pathlib import Path\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "import lib.db as db"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CXN = db.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INTERIM_DATA = Path('..') / 'data' / 'interim'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = Path('..') / 'data'\n",
+    "db_path = str(data_path / 'processed' / 'nitfix.sqlite.db')\n",
+    "interim_data = data_path / 'interim'\n",
+    "\n",
+    "in_both = str(interim_data / 'in_both.csv')\n",
+    "in_neither = str(interim_data / 'in_neither.csv')\n",
+    "in_loci_only = str(interim_data / 'in_loci_only.csv')\n",
+    "in_sampled_only = str(interim_data / 'in_sampled_only.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = (\n",
+    "    \"'SELECT DISTINCT scientific_name \"\n",
+    "      \"FROM taxons \"\n",
+    "     \"WHERE scientific_name {} (\"\n",
+    "           \"SELECT scientific_name FROM samples \"\n",
+    "            \"WHERE scientific_name IS NOT NULL) \"\n",
+    "       \"AND scientific_name {} (\"\n",
+    "            \"SELECT scientific_name FROM loci \"\n",
+    "              \"WHERE (its + atpb + matk + matr + rbcl) > 0) \"\n",
+    "  \"ORDER BY scientific_name;'\")\n",
+    "    \n",
+    "in_both_sql = query.format('IN', 'IN')\n",
+    "in_neither_sql = query.format('NOT IN', 'NOT IN')\n",
+    "in_loci_only_sql = query.format('NOT IN', 'IN')\n",
+    "in_sampled_only_sql = query.format('IN', 'NOT IN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'SELECT DISTINCT scientific_name FROM taxons WHERE scientific_name IN (SELECT scientific_name FROM samples WHERE scientific_name IS NOT NULL) AND scientific_name IN (SELECT scientific_name FROM loci WHERE (its + atpb + matk + matr + rbcl) > 0) ORDER BY scientific_name;'\n",
+      "\n",
+      "'SELECT DISTINCT scientific_name FROM taxons WHERE scientific_name NOT IN (SELECT scientific_name FROM samples WHERE scientific_name IS NOT NULL) AND scientific_name NOT IN (SELECT scientific_name FROM loci WHERE (its + atpb + matk + matr + rbcl) > 0) ORDER BY scientific_name;'\n",
+      "\n",
+      "'SELECT DISTINCT scientific_name FROM taxons WHERE scientific_name NOT IN (SELECT scientific_name FROM samples WHERE scientific_name IS NOT NULL) AND scientific_name IN (SELECT scientific_name FROM loci WHERE (its + atpb + matk + matr + rbcl) > 0) ORDER BY scientific_name;'\n",
+      "\n",
+      "'SELECT DISTINCT scientific_name FROM taxons WHERE scientific_name IN (SELECT scientific_name FROM samples WHERE scientific_name IS NOT NULL) AND scientific_name NOT IN (SELECT scientific_name FROM loci WHERE (its + atpb + matk + matr + rbcl) > 0) ORDER BY scientific_name;'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(in_both_sql)\n",
+    "print()\n",
+    "print(in_neither_sql)\n",
+    "print()\n",
+    "print(in_loci_only_sql)\n",
+    "print()\n",
+    "print(in_sampled_only_sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- Loading resources from /home/rafe/.sqliterc\n",
+      "-- Loading resources from /home/rafe/.sqliterc\n",
+      "-- Loading resources from /home/rafe/.sqliterc\n",
+      "-- Loading resources from /home/rafe/.sqliterc\n"
+     ]
+    }
+   ],
+   "source": [
+    "!sqlite3 -header -csv $db_path $in_both_sql         > $in_both\n",
+    "!sqlite3 -header -csv $db_path $in_loci_only_sql    > $in_loci_only\n",
+    "!sqlite3 -header -csv $db_path $in_sampled_only_sql > $in_sampled_only\n",
+    "!sqlite3 -header -csv $db_path $in_neither_sql      > $in_neither"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loci = pd.read_sql(\"\"\"SELECT scientific_name FROM loci\n",
+    "#                        WHERE its + atpb + matk + matr + rbcl > 0\"\"\", CXN)\n",
+    "# taxons = pd.read_sql('SELECT scientific_name FROM taxons', CXN)\n",
+    "# samples = pd.read_sql('SELECT scientific_name FROM samples', CXN)\n",
+    "\n",
+    "# loci = loci.dropna()\n",
+    "# taxons = taxons.dropna()\n",
+    "# samples = samples.dropna()\n",
+    "\n",
+    "# loci = set(loci.scientific_name.unique())\n",
+    "# taxons = set(taxons.scientific_name.unique())\n",
+    "# samples = set(samples.scientific_name.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in_both 4045\n",
+      "in_neither 23406\n",
+      "in_loci_only 7322\n",
+      "in_samples_only 3877\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in_both = taxons & loci & samples\n",
+    "# in_neither = taxons - loci - samples\n",
+    "# in_loci_only = taxons & loci - samples\n",
+    "# in_samples_only = taxons - loci & samples\n",
+    "\n",
+    "# print('in_both', len(in_both))\n",
+    "# print('in_neither', len(in_neither))\n",
+    "# print('in_loci_only', len(in_loci_only))\n",
+    "# print('in_samples_only', len(in_samples_only))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open(INTERIM_DATA / 'in_both.csv', 'w') as out_file:\n",
+    "#     out_file.write('scientific_name\\n')\n",
+    "#     for name in sorted(in_both):\n",
+    "#         out_file.write(f'{name}\\n')\n",
+    "\n",
+    "# with open(INTERIM_DATA / 'in_neither.csv', 'w') as out_file:\n",
+    "#     out_file.write('scientific_name\\n')\n",
+    "#     for name in sorted(in_neither):\n",
+    "#         out_file.write(f'{name}\\n')\n",
+    "\n",
+    "# with open(INTERIM_DATA / 'in_loci_only.csv', 'w') as out_file:\n",
+    "#     out_file.write('scientific_name\\n')\n",
+    "#     for name in sorted(in_loci_only):\n",
+    "#         out_file.write(f'{name}\\n')\n",
+    "\n",
+    "# with open(INTERIM_DATA / 'in_samples_only.csv', 'w') as out_file:\n",
+    "#     out_file.write('scientific_name\\n')\n",
+    "#     for name in sorted(in_samples_only):\n",
+    "#         out_file.write(f'{name}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assign UUIDs to UFIB (Pilot Study) Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import uuid\n",
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_DIR = Path('..') / 'data'\n",
+    "PILOT_IN = DATA_DIR / 'raw' / 'pilot' / 'UFBI_identifiers_photos.csv'\n",
+    "PILOT_OUT = DATA_DIR / 'interim' / 'UFBI_identifiers_photos'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +277,132 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>File</th>\n",
+       "      <th>Identifier</th>\n",
+       "      <th>sample_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20170523_154701.jpg</td>\n",
+       "      <td>NY: Cronquist 11617</td>\n",
+       "      <td>d9eacc0d-8905-46c7-a6c7-51f11706012d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20170523_154645.jpg</td>\n",
+       "      <td>NY: Nee 38556</td>\n",
+       "      <td>a63522e1-dc42-42b0-86cb-aa919c90af90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20170523_154638.jpg</td>\n",
+       "      <td>NY: Jorengensen 65676</td>\n",
+       "      <td>fb08024e-947d-4f8b-901c-c9fd83f3fed1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20170523_154629.jpg</td>\n",
+       "      <td>NY: Jaramillo 10160</td>\n",
+       "      <td>121d9e92-a1fd-4a6c-98e3-2194fe6463ab</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20170523_154621.jpg</td>\n",
+       "      <td>NY: Jorgensen 61589</td>\n",
+       "      <td>20690cf5-738e-42c5-a608-6ba93a3663da</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  File             Identifier  \\\n",
+       "0  20170523_154701.jpg    NY: Cronquist 11617   \n",
+       "1  20170523_154645.jpg          NY: Nee 38556   \n",
+       "2  20170523_154638.jpg  NY: Jorengensen 65676   \n",
+       "3  20170523_154629.jpg    NY: Jaramillo 10160   \n",
+       "4  20170523_154621.jpg    NY: Jorgensen 61589   \n",
+       "\n",
+       "                              sample_id  \n",
+       "0  d9eacc0d-8905-46c7-a6c7-51f11706012d  \n",
+       "1  a63522e1-dc42-42b0-86cb-aa919c90af90  \n",
+       "2  fb08024e-947d-4f8b-901c-c9fd83f3fed1  \n",
+       "3  121d9e92-a1fd-4a6c-98e3-2194fe6463ab  \n",
+       "4  20690cf5-738e-42c5-a608-6ba93a3663da  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pilot = pd.read_csv(PILOT_IN)\n",
+    "pilot['sample_id'] = np.NaN\n",
+    "pilot.sample_id = pilot.sample_id.map(lambda x: uuid.uuid4())\n",
+    "pilot.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pilot.to_csv(PILOT_OUT, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Picogreen Yields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import lib.db as db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>picogreen_id</th>\n",
        "      <th>well</th>\n",
        "      <th>rfu</th>\n",
@@ -54,80 +416,85 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>13_02</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>e58072c6-ce0f-4029-9246-9756c391d944</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>0</td>\n",
        "      <td>13_01</td>\n",
        "      <td>A1</td>\n",
        "      <td>195.286</td>\n",
-       "      <td>9.64549</td>\n",
-       "      <td>10.18926376</td>\n",
+       "      <td>9.645493</td>\n",
+       "      <td>10.189264</td>\n",
        "      <td>picogreen</td>\n",
        "      <td>2_15_18</td>\n",
        "      <td>c84c6871-887f-479e-bf1e-ff1c68b1c490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td></td>\n",
        "      <td>B1</td>\n",
        "      <td>217.399</td>\n",
-       "      <td>10.733</td>\n",
-       "      <td>NA</td>\n",
+       "      <td>10.733035</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>picogreen</td>\n",
        "      <td>2_15_18</td>\n",
-       "      <td></td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>13_02</td>\n",
        "      <td>A2</td>\n",
        "      <td>1149.629</td>\n",
-       "      <td>56.5812</td>\n",
-       "      <td>65.82438892</td>\n",
+       "      <td>56.581164</td>\n",
+       "      <td>65.824389</td>\n",
        "      <td>picogreen</td>\n",
        "      <td>2_15_18</td>\n",
        "      <td>e58072c6-ce0f-4029-9246-9756c391d944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td></td>\n",
        "      <td>B2</td>\n",
        "      <td>1525.514</td>\n",
-       "      <td>75.0676</td>\n",
-       "      <td>NA</td>\n",
+       "      <td>75.067614</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>picogreen</td>\n",
        "      <td>2_15_18</td>\n",
-       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>13_03</td>\n",
+       "      <td>A3</td>\n",
+       "      <td>337.331</td>\n",
+       "      <td>16.631427</td>\n",
+       "      <td>14.516884</td>\n",
+       "      <td>picogreen</td>\n",
+       "      <td>2_15_18</td>\n",
+       "      <td>d07a86d9-dab9-45c9-a547-36b15ccc1dd7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  picogreen_id well       rfu ng_microliter ng_microliter_mean quant_method  \\\n",
-       "0        13_02                                                                \n",
-       "1        13_01   A1   195.286       9.64549        10.18926376    picogreen   \n",
-       "2                B1   217.399        10.733                 NA    picogreen   \n",
-       "3        13_02   A2  1149.629       56.5812        65.82438892    picogreen   \n",
-       "4                B2  1525.514       75.0676                 NA    picogreen   \n",
+       "   index picogreen_id well       rfu  ng_microliter  ng_microliter_mean  \\\n",
+       "0      0        13_01   A1   195.286       9.645493           10.189264   \n",
+       "1      1                B1   217.399      10.733035                 NaN   \n",
+       "2      2        13_02   A2  1149.629      56.581164           65.824389   \n",
+       "3      3                B2  1525.514      75.067614                 NaN   \n",
+       "4      4        13_03   A3   337.331      16.631427           14.516884   \n",
        "\n",
-       "  quant_date                             sample_id  \n",
-       "0             e58072c6-ce0f-4029-9246-9756c391d944  \n",
-       "1    2_15_18  c84c6871-887f-479e-bf1e-ff1c68b1c490  \n",
-       "2    2_15_18                                        \n",
-       "3    2_15_18  e58072c6-ce0f-4029-9246-9756c391d944  \n",
-       "4    2_15_18                                        "
+       "  quant_method quant_date                             sample_id  \n",
+       "0    picogreen    2_15_18  c84c6871-887f-479e-bf1e-ff1c68b1c490  \n",
+       "1    picogreen    2_15_18                                  None  \n",
+       "2    picogreen    2_15_18  e58072c6-ce0f-4029-9246-9756c391d944  \n",
+       "3    picogreen    2_15_18                                  None  \n",
+       "4    picogreen    2_15_18  d07a86d9-dab9-45c9-a547-36b15ccc1dd7  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,16 +508,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "534"
+       "0    10.189264\n",
+       "2    65.824389\n",
+       "4    14.516884\n",
+       "6    48.778577\n",
+       "8     0.217543\n",
+       "Name: ng_microliter_mean, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -190,6 +562,13 @@
     "plt.hist(yields, bins=bins, rwidth=0.9)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -209,6 +588,23 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.3"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "48px",
+    "left": "1107px",
+    "top": "111.133px",
+    "width": "159px"
+   },
+   "toc_section_display": false,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
